--- a/Desafio_Tecnico_ume.ipynb
+++ b/Desafio_Tecnico_ume.ipynb
@@ -326,7 +326,7 @@
     "id": "vfR-iyprhSSF"
    },
    "source": [
-    "A primeira vista podemos observar a ausencia de valores na coluna **debt3**. Vamos verificar se há outras colunas que contém campos não preenchidos."
+    "A primeira vista podemos observar a ausência de valores na coluna **debt3**. Vamos verificar se há outras colunas que contém campos não preenchidos."
    ]
   },
   {
@@ -579,7 +579,7 @@
     "id": "oF_zgxAQmvFK"
    },
    "source": [
-    "Observando uma descrição geral das features e os histogramas de cada coluna podemos ter uma ideia geral de como estão dispostos os dados de cada coluna. As features abaixo podem ser divididas em variáveis Numéricas, Categoricas e Lógicas(Categoricas Binárias). No código abaixo separamos as features entre essas categorias: "
+    "Observando uma descrição geral das features e os histogramas de cada coluna podemos ter uma ideia geral de como estão dispostos os dados de cada coluna. As features abaixo podem ser divididas em variáveis numéricas, categoricas e lógicas(categoricas binárias). No código abaixo separamos as features entre essas categorias: "
    ]
   },
   {
@@ -633,11 +633,11 @@
    "source": [
     "Olhando as características das features e os histogramas acima podemos destacar coisas como:\n",
     "\n",
-    "* As colunas 'demo1' e 'demo2' parecem se tratar respectivamente das seguintes informações: idade e genero.\n",
+    "* As colunas **demo1** e **demo2** parecem se tratar respectivamente das seguintes informações: idade e gênero.\n",
     "\n",
-    "* A coluna 'income2' possui a gigantesca maioria dos seus dados concentrados entre 0 e 10⁴ e alguns outliers fora desse range.\n",
+    "* A coluna **income2** possui a gigantesca maioria dos seus dados concentrados entre 0 e 10⁴ e alguns outliers fora desse range.\n",
     "\n",
-    "* Há um grande desbalanceamento entre clientes bons pagadores e clientes mau pagadores, como pode ser visto no histograma 'target'. Isso pode ser um problema para o treinamento dos modelos.\n"
+    "* Há um grande desbalanceamento entre clientes bons pagadores e clientes mau pagadores, como pode ser visto no histograma **target**. Isso pode ser um problema para o treinamento dos modelos.\n"
    ]
   },
   {
@@ -694,7 +694,7 @@
    "source": [
     "Para validar os modelos testados nesse notebook, faremos validação cruzada com 5 folds. Por fim testaremos os modelos junto aos dados de teste separados no começo do notebook.\n",
     "\n",
-    "Dado que existe um grande desbalanceamento entre as classes em nosso problema a acuracia não se encaixa tão bem como métrica de avaliação, pois se prevermos todos os clientes como bons pagadores já atingiremos uma alta acuracia uma vez que a maioria dos clientes são bons pagadores. Para avaliar os modelos aqui treinados utilizaremos métricas que avaliem o quão bem são avaliadas as classes em separado, utilizaremos:\n",
+    "Dado que existe um grande desbalanceamento entre as classes em nosso problema a acurácia não se encaixa tão bem como métrica de avaliação, pois se prevermos todos os clientes como bons pagadores já atingiremos uma alta acurácia uma vez que a maioria dos clientes são bons pagadores. Para avaliar os modelos aqui treinados utilizaremos métricas que avaliem o quão bem são avaliadas as classes em separado, utilizaremos:\n",
     "\n",
     "* **Revocação**\n",
     "\n",
@@ -759,7 +759,7 @@
     "id": "TtYgcGPc4upl"
    },
    "source": [
-    "Para tentar construir um modelo que consiga distinguir entre bons e maus pagadores testarei dois dos mais famosos e mais utilizados modelos de machine learning usados em diversos contextos. Ambos são construídos em cima do método de ensemble no nosso caso são emsembles de arvores de decisão.\n"
+    "Para tentar construir um modelo que consiga distinguir entre bons e maus pagadores testarei dois dos mais famosos e mais utilizados modelos de machine learning usados em diversos contextos. Ambos são construídos em cima do método de ensemble no nosso caso são modelos contruídos com conjuntos de arvores de decisão.\n"
    ]
   },
   {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -902,7 +902,7 @@
       "Validação Cruzada\n",
       "AUC = 0.6453108345309244\n",
       "\n",
-      "Teste no próprio conjunto de teste\n",
+      "Teste no próprio conjunto de treino\n",
       "Revocação = 0.008211143695014663, Especificidade = 1.0, AUC = 0.5041055718475074\n",
       "\n",
       "Modelo que só chuta 1\n",
@@ -920,7 +920,7 @@
     "#treino\n",
     "RF.fit(X_train,y_train)\n",
     "\n",
-    "print(\"\\nTeste no próprio conjunto de teste\")\n",
+    "print(\"\\nTeste no próprio conjunto de treino\")\n",
     "evaluate(RF,X_train,y_train)\n",
     "print(\"\\nModelo que só chuta 1\")\n",
     "evaluate(None,X_train,y_train)"
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {
     "id": "sPe9oO4LjZYp"
    },
@@ -977,7 +977,7 @@
       "Validação Cruzada\n",
       "AUC = 0.643935593466014\n",
       "\n",
-      "Teste no próprio conjunto de teste\n",
+      "Teste no próprio conjunto de treino\n",
       "Revocação = 0.002932551319648094, Especificidade = 1.0, AUC = 0.501466275659824\n",
       "\n",
       "Modelo que só chuta 1\n",
@@ -995,7 +995,7 @@
     "#treino\n",
     "XG.fit(X_train,y_train)\n",
     "\n",
-    "print(\"\\nTeste no próprio conjunto de teste\")\n",
+    "print(\"\\nTeste no próprio conjunto de treino\")\n",
     "evaluate(XG,X_train,y_train)\n",
     "print(\"\\nModelo que só chuta 1\")\n",
     "evaluate(None,X_train,y_train)"
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1109,7 +1109,7 @@
       "Validação Cruzada\n",
       "AUC = 0.6509042749890351\n",
       "\n",
-      "Teste no próprio conjunto de teste\n",
+      "Teste no próprio conjunto de treino\n",
       "Revocação = 0.9085043988269794, Especificidade = 0.787683284457478, AUC = 0.8480938416422288\n",
       "\n",
       "Modelo que só chuta 1\n",
@@ -1126,7 +1126,7 @@
     "#treino\n",
     "RF_sub.fit(X_train_sub,y_train_sub)\n",
     "\n",
-    "print(\"\\nTeste no próprio conjunto de teste\")\n",
+    "print(\"\\nTeste no próprio conjunto de treino\")\n",
     "evaluate(RF_sub,X_train_sub,y_train_sub)\n",
     "\n",
     "print(\"\\nModelo que só chuta 1\")\n",
@@ -1200,7 +1200,7 @@
     "#treino\n",
     "XG_sub.fit(X_train_sub,y_train_sub)\n",
     "\n",
-    "print(\"\\nTeste no próprio conjunto de teste\")\n",
+    "print(\"\\nTeste no próprio conjunto de treino\")\n",
     "evaluate(XG_sub,X_train_sub,y_train_sub)\n",
     "\n",
     "print(\"\\nModelo que só chuta 1\")\n",
@@ -1222,9 +1222,9 @@
    "source": [
     "### Oversampling\n",
     "\n",
-    "Motivado pelos resultados alcançados pelo subsampling tentamos fazer um oversampling para balancear as classes, dessa vez copiamos exemplos aleatorios dos que são positivos afim de igualar o número de exemplos negativos ou seja: 8295 Mau Pagadores e 8295 Bons Pagadores.\n",
+    "Motivado pelos resultados alcançados pelo subsampling tentei fazer um oversampling para balancear as classes, dessa vez copiamos exemplos aleatórios dos que são positivos afim de igualar o número de exemplos negativos ou seja: 8295 Mau Pagadores e 8295 Bons Pagadores.\n",
     "\n",
-    "Os testes com Oversampling foram realizados mas não foram postos aqui por não terem um bom resultado. Talvez o número de duplicados entre 1705 e 8295 seja muito grande e fazer esse oversampling não seja uma boa ideia. Por isso abaixo testaremos um meio termo vamos fazer um teste com 3410 Mau Pagadores e 3410 Bons Pagadores."
+    "Os testes com Oversampling foram realizados mas não foram postos aqui por não terem um bom resultado. Talvez o número de duplicados entre 1705 e 8295 seja muito grande e fazer esse oversampling não seja uma boa ideia. Por isso abaixo testarei um meio termo. Vamos fazer um teste com 3410 Mau Pagadores e 3410 Bons Pagadores."
    ]
   },
   {
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
       "Validação Cruzada\n",
       "AUC = 0.6473662937195244\n",
       "\n",
-      "Teste no próprio conjunto de teste\n",
+      "Teste no próprio conjunto de treino\n",
       "Revocação = 1.0, Especificidade = 1.0, AUC = 1.0\n",
       "\n",
       "Modelo que só chuta 1\n",
@@ -1300,7 +1300,7 @@
     "#treino\n",
     "RF_over.fit(X_train_over,y_train_over)\n",
     "\n",
-    "print(\"\\nTeste no próprio conjunto de teste\")\n",
+    "print(\"\\nTeste no próprio conjunto de treino\")\n",
     "evaluate(RF_over,X_train_over,y_train_over)\n",
     "\n",
     "print(\"\\nModelo que só chuta 1\")\n",
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
       "Validação Cruzada\n",
       "AUC = 0.9243844652178774\n",
       "\n",
-      "Teste no próprio conjunto de teste\n",
+      "Teste no próprio conjunto de treino\n",
       "Revocação = 1.0, Especificidade = 1.0, AUC = 1.0\n",
       "\n",
       "Modelo que só chuta 1\n",
@@ -1361,7 +1361,7 @@
     "#treino\n",
     "XG_over.fit(X_train_over,y_train_over)\n",
     "\n",
-    "print(\"\\nTeste no próprio conjunto de teste\")\n",
+    "print(\"\\nTeste no próprio conjunto de treino\")\n",
     "evaluate(XG_over,X_train_over,y_train_over)\n",
     "\n",
     "print(\"\\nModelo que só chuta 1\")\n",
@@ -1523,7 +1523,7 @@
    "source": [
     "# Modelo Proposto\n",
     "\n",
-    "Dado os resultados acima escolhemos como modelo final a Random Forest **RF_sub**  que foi treinado com o subsample que iguala o número de clientes bons e maus pagadores. O modelo selecionado atingiu AUC = 0.639, com uma boa Revocação = 0.76 e uma Especificidade = 0.518. Os primeiros modelos,**RF e XG**, treinados com os todos os samples disponíveis atingiram um resultado ruim, RF e XG ambos tiveram grandes Especificidades isso é, estão prevendo quase todos os clientes como maus clientes já que a Revocação foi 0 para ambos. Os modelos treinados com oversampling **RF_over e XG_over** tem um desempenho melhor do que os primeiros modelos mas são piores que os modelos treinados com o subsampling. Talvez a criação de dados sintéticos melhorasse o desempenho do modelo com oversampling."
+    "Dado os resultados acima escolhemos como modelo final a Random Forest **RF_sub**  que foi treinado com o subsample que iguala o número de clientes bons e maus pagadores. O modelo selecionado atingiu AUC = 0.639, com uma boa Revocação = 0.76 e uma Especificidade = 0.518. Os primeiros modelos,**RF e XG**, treinados com os todos os samples disponíveis atingiram um resultado ruim, RF e XG ambos tiveram grandes especificidades, isso é, estão prevendo quase todos os clientes como maus clientes já que a Revocação foi 0 para ambos. Os modelos treinados com oversampling **RF_over e XG_over** tem um desempenho melhor do que os primeiros modelos mas são piores que os modelos treinados com o subsampling. Talvez a criação de dados sintéticos melhorasse o desempenho do modelo com oversampling."
    ]
   },
   {
@@ -1541,7 +1541,7 @@
    "source": [
     "# Analisando importancia das Features para o modelo\n",
     "\n",
-    "Afim de analisar a importancia das features individualmente para os modelos nós usaremos uma ferramenta chamada SHAP values (Valores de SHAP). Os valores SHAP interpretam o impacto de ter um determinado valor para uma determinada feature em comparação com a previsão que faríamos se esse recurso assumisse algum valor base."
+    "Afim de analisar a importancia das features individualmente para os modelos usarei uma ferramenta chamada SHAP values (Valores de SHAP). Os valores SHAP interpretam o impacto de ter um determinado valor para uma determinada feature em comparação com a previsão que faríamos se esse recurso assumisse algum valor base."
    ]
   },
   {
