--- a/Desafio_Tecnico_ume.ipynb
+++ b/Desafio_Tecnico_ume.ipynb
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 93,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1183,7 +1183,7 @@
       "Validação Cruzada\n",
       "AUC = 0.6444268625140823\n",
       "\n",
-      "Teste no próprio conjunto de teste\n",
+      "Teste no próprio conjunto de treino\n",
       "Revocação = 0.8527859237536657, Especificidade = 0.7284457478005865, AUC = 0.7906158357771261\n",
       "\n",
       "Modelo que só chuta 1\n",
